adjust style and about

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,10 +2,13 @@
 
 <h1>About</h1>
 
-<p>Adi (b. 1999, Indonesia) is a backend engineer specializing in scalable systems and database optimization.</p>
+<p>I’m a <b>backend-focused Software Engineer</b> with a curiosity for understanding systems at their core. I enjoy exploring design and architecture decisions, which helps me refine my development practices.</p>
 
-<p>He began programming during his university years and worked as a backend engineer in Jakarta while residing in Yogyakarta. Adi earned his BSc in Computer Science from Pembangunan Nasional "Veteran" Yogyakarta University. In his free time, he enjoys creating quirky side projects.</p>
+<p>My work centers on building reliable server-side applications and APIs, with a focus on creating scalable, high-performance systems. I believe strong fundamentals make it easier to adapt to new technologies and tackle challenges across the software ecosystem.</p>
 
+<p><b>I use <a href="https://neovim.io/" target="_blank">NeoVim</a></b> for development and appreciate its simplicity and efficiency. <b>Based in Yogyakarta, Indonesia </b>(🇮🇩), I’m open to remote opportunities to collaborate with diverse teams worldwide.</p>
+
+<p>Feel free to connect—whether here or on <a href="https://x.com/myusufadp" target="_blank">Twitter</a>!<p/>
 
 <p><a href="about/">Read more</a></p>
 
